--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.19.3",
+    "morgan": "^1.10.1"
   }
 }
