simple setup for payment gateway

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "type": "commonjs",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "braintree": "^3.35.0",
     "colors": "^1.4.0",
     "concurrently": "^9.2.1",
     "cors": "^2.8.5",
