--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.29.1",
     "axios": "^1.13.2",
     "braintree-web-drop-in-react": "^1.2.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
